<?xml version="1.0" encoding="utf-8"?>
<!--
HoloIRC - an IRC client for Android

Copyright 2013 Lalit Maganti

This file is part of HoloIRC.

HoloIRC is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

HoloIRC is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with HoloIRC. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name" translatable="false">HoloIRC</string>

    <!-- Status -->
    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>

    <!-- Server settings -->
    <string name="server_settings_title">Server Settings</string>
    <string name="server_settings_changes_saved">Changes have been saved</string>
    <string name="server_settings_auto_nick_summary">If someone else is using your preferred nick
        another will automatically be used
    </string>
    <string name="server_settings_auto_nick_title">Auto-change nick name</string>
    <string name="server_settings_server_password_title">NickServ password</string>
    <string name="server_settings_auto_join_title">Auto-join channels</string>
    <string name="server_settings_ssl_title">Use SSL</string>
    <string name="server_settings_ssl_summary">Use SSL to connect to the server - the port will be
        different to
        normal
    </string>
    <string name="server_settings_port_title">Server Port</string>
    <string name="server_settings_url_title">Server URL</string>
    <string name="server_settings_server_title">Server title</string>
    <string name="server_settings_nick_storage_title">Nick Names</string>
    <string name="server_settings_nick_storage_summary">Choose first, second and third choice nick
        names
    </string>

    <!-- App settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_appearance_summary">Settings to control the way the app looks</string>
    <string name="server_channel_settings_title">Server/Channel Settings</string>
    <string name="server_channel_settings_summary">Common settings for all servers in the app
    </string>
    <string name="settings_about_fragment_summary">Find out about the author and the app :)</string>
    <string name="about_settings_app_version">App Version</string>

    <!-- Appearance settings -->
    <string name="appearance_settings_requires_restart">This requires a full restart of the app
    </string>

    <!-- Server/channel settings -->
    <string name="server_channel_settings_motd_title">Display MOTD</string>
    <string name="server_channel_settings_motd_description">Display Message of the Day from the
        server
    </string>
    <string name="server_channel_settings_hide_messages_summary">For example join, part and quit
        messages
    </string>
    <string name="server_channel_settings_hide_messages_title">Hide messages from channels</string>

    <!-- Output for events -->
    <string name="parser_notice" translatable="false">
        <![CDATA[<b>%1$s: %2$s</b>]]>
    </string>
    <string name="parser_user_kicked_channel">You were kicked from %1$s by %2$s</string>
    <string name="parser_message" translatable="false">%1$s: %2$s</string>
    <string name="parser_connected">Connected to %1$s</string>
    <string name="parser_joined_channel">%1$s joined the channel</string>
    <string name="parser_quit_server">%1$s quit the server</string>
    <string name="parser_parted_channel">%1$s parted from the channel</string>
    <string name="parser_kicked_channel">%1$s was kicked from the channel by %2$s</string>
    <string name="parser_reason">(Reason: %1$s)</string>
    <string name="parser_mode_changed">Mode %1$s on %2$s by %3$s</string>
    <string name="parser_new_topic">The topic is %1$s as set forth by %2$s</string>
    <string name="parser_topic_changed">
        The topic for this channel has been changed to %1$s by %2$s
    </string>
    <string name="parser_nick_in_use">Nickname is already in use.</string>
    <string name="parser_appuser_nick_changed">You (%1$s) are now known as %2$s</string>
    <string name="parser_other_user_nick_change">%1$s is now known as %2$s</string>
    <string name="parser_action" translatable="false">
        <![CDATA[<b>* %1$s %2$s</b>]]>
    </string>

    <!-- Prompt dialog -->
    <string name="prompt_dialog_channel_name">Channel Name</string>
    <string name="prompt_dialog_including_starting">Including the starting #</string>

    <!-- Service/notification -->
    <string name="service_disconnect_all">Disconnect all</string>
    <string name="service_you_mentioned">You have been mentioned on</string>
    <string name="activity_mentioned">You have been mentioned on %1$s</string>

    <!-- User list fragment -->
    <string name="user_list_not_possible">Not possible</string>
    <string name="user_list_pm_self_not_possible">You can not PM yourself</string>

    <!-- One word generics -->
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="users">Users</string>
    <string name="disconnect">Disconnect</string>
    <string name="description">Description</string>
    <string name="overflow">Overflow</string>
    <string name="title">Title</string>
    <string name="mention">Mention</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="private_message_short_form">PM</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart</string>
    <string name="nickname">Nickname</string>
    <string name="new_nick">New nick</string>
    <string name="ok">OK</string>
    <string name="message">Message</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="about">About</string>
    <string name="whois" translatable="false">WHOIS</string>
    <string name="server">Server</string>
    <string name="optional">Optional</string>
    <string name="server_settings_non_empty">%1$s must not be empty</string>
    <string name="server_settings_no_password">No password is set</string>
    <string name="server_settings_password_set">Password is set</string>
    <string name="channel">Channel</string>
    <string name="user">User</string>
    <string name="add_channel">Add channel</string>
    <string name="server_settings_changes_discarded">Changes discarded</string>
    <string name="remove">Remove</string>
    <string name="default_user_settings_header">Default User Settings</string>
    <string name="default_user_settings_summary">The user settings that will be used as a base when
        creating new servers
    </string>
    <string name="nick_first_choice">First choice nick name</string>
    <string name="nick_second_choice">Second choice nick name</string>
    <string name="nick_third_choice">Third choice nick name</string>

    <string name="action_part_channel">Part channel</string>
    <string name="action_close_pm">Close PM</string>
    <string name="pref_highlight_whole_line_title">Nick line colours</string>
    <string name="pref_highlight_whole_line_summary">Make the whole line colourful when associated
        with a nick
    </string>
    <string name="notification_settings_summary">Control when you are notified by the app</string>
    <string name="notification_settings_title">Notification Settings</string>

</resources>