<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
            android:fragment="com.fusionx.lightirc.fragments.settings.AppearanceSettingsFragment"
            android:title="@string/appearance"
            android:summary="@string/settings_appearance_summary"/>
    <header
            android:fragment="com.fusionx.lightirc.fragments.settings.ServerChannelSettingsFragment"
            android:title="@string/server_channel_settings_title"
            android:summary="@string/server_channel_settings_summary"/>
    <header
            android:fragment="com.fusionx.lightirc.fragments.settings.DefaultUserFragment"
            android:title="@string/default_user_settings_header"
            android:summary="@string/default_user_settings_summary"/>
    <header
            android:fragment="com.fusionx.lightirc.fragments.settings.AboutFragment"
            android:title="@string/about"
            android:summary="@string/settings_about_fragment_summary"/>
</preference-headers>