<?xml version="1.0" encoding="utf-8"?>
<!--
    HoloIRC - an IRC client for Android

    Copyright 2013 Lalit Maganti

    This file is part of HoloIRC.

    HoloIRC is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    HoloIRC is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with HoloIRC. If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <com.fusionx.lightirc.views.MustBeCompleteView
            android:key="must_be_complete"/>

    <PreferenceCategory android:title="Connection">
        <com.fusionx.lightirc.preferences.edittext.ServerTitleEditTextPreference
                android:key="pref_title"
                android:defaultValue=""
                android:singleLine="true"
                android:lines="1"
                android:title="@string/server_settings_server_title"/>
        <com.fusionx.lightirc.preferences.edittext.NonEmptyEditTextPreference
                android:key="pref_url"
                android:defaultValue=""
                android:singleLine="true"
                android:lines="1"
                android:title="@string/server_settings_url_title"/>
        <com.fusionx.lightirc.preferences.edittext.NonEmptyEditTextPreference
                android:key="pref_port"
                android:title="@string/server_settings_port_title"
                android:inputType="number"
                android:defaultValue="6667"
                android:singleLine="true"
                android:lines="1"/>
        <CheckBoxPreference
                android:key="pref_ssl"
                android:defaultValue="false"
                android:title="@string/server_settings_ssl_title"
                android:summary="@string/server_settings_ssl_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="User">
        <com.fusionx.lightirc.preferences.nick.NickPreference
                android:key="pref_nick_storage"
                android:title="@string/server_settings_nick_storage_title"
                android:summary="@string/server_settings_nick_storage_summary"/>
        <com.fusionx.lightirc.preferences.edittext.NonEmptyEditTextPreference
                android:defaultValue="HoloIRCUser"
                android:key="pref_realname"
                android:title="Real Name"
                android:singleLine="true"
                android:lines="1"/>
        <CheckBoxPreference
                android:key="pref_auto_nick"
                android:defaultValue="true"
                android:title="@string/server_settings_auto_nick_title"
                android:summary="@string/server_settings_auto_nick_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Channels">
        <PreferenceScreen
            android:fragment="com.fusionx.lightirc.serversettings.ListViewSettingsFragment"
            android:key="pref_autojoin_intent"
            android:title="@string/server_settings_auto_join_title">
            <intent>
                <extra android:name="listview" android:value="true" />
            </intent>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Server Credentials">
        <com.fusionx.lightirc.preferences.edittext.NonEmptyEditTextPreference
                android:defaultValue="holoirc"
                android:key="pref_login_username"
                android:title="@string/username"
                android:singleLine="true"
                android:lines="1"/>
        <com.fusionx.lightirc.preferences.edittext.PasswordSummaryEditTextPreference
                android:defaultValue=""
                android:inputType="textPassword"
                android:key="pref_login_password"
                android:title="@string/password"
                android:singleLine="true"
                android:lines="1"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="SASL Credentials - if supported">
        <com.fusionx.lightirc.preferences.edittext.SaslUsernameEditTextPreference
                android:defaultValue=""
                android:key="pref_sasl_username"
                android:title="SASL Username"
                android:singleLine="true"
                android:lines="1"/>
        <com.fusionx.lightirc.preferences.edittext.PasswordSummaryEditTextPreference
                android:defaultValue=""
                android:inputType="textPassword"
                android:key="pref_sasl_password"
                android:title="SASL Password"
                android:singleLine="true"
                android:lines="1"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="NickServ Credentials - if supported">
        <com.fusionx.lightirc.preferences.edittext.PasswordSummaryEditTextPreference
                android:defaultValue=""
                android:key="pref_nickserv_password"
                android:title="@string/server_settings_server_password_title"
                android:inputType="textPassword"
                android:singleLine="true"
                android:lines="1"/>
    </PreferenceCategory>
</PreferenceScreen>