<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:picker="http://schemas.android.com/apk/res/com.fusionx.lightirc"
                  xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Server Settings">
        <com.michaelnovakjr.numberpicker.NumberPickerPreference
                android:key="pref_reconnect_tries"
                picker:defaultValue="3"
                android:dialogMessage="The number of times the app should try to reconnect to the server"
                picker:endRange="20"
                android:title="Reconnect attempts"
                picker:startRange="0"/>
        <CheckBoxPreference
                android:key="pref_motd"
                android:defaultValue="true"
                android:title="@string/server_channel_settings_motd_title"
                android:summary="@string/server_channel_settings_motd_description"/>
        <com.fusionx.lightirc.preferences.edittext.SummaryEditTextPreference
                android:key="pref_quit_reason"
                android:defaultValue=""
                android:title="Reason for quitting server"
                android:summary=""/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Channel Settings">
        <CheckBoxPreference
                android:key="pref_hide_messages"
                android:defaultValue="false"
                android:title="@string/server_channel_settings_hide_messages_title"
                android:summary="@string/server_channel_settings_hide_messages_summary"/>
        <com.fusionx.lightirc.preferences.edittext.SummaryEditTextPreference
                android:key="pref_part_reason"
                android:defaultValue=""
                android:title="Reason for parting channel"
                android:summary=""/>
    </PreferenceCategory>
</PreferenceScreen>