<?xml version="1.0" encoding="utf-8"?>
<!--
    HoloIRC - an IRC client for Android

    Copyright 2013 Lalit Maganti

    This file is part of HoloIRC.

    HoloIRC is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    HoloIRC is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with HoloIRC. If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/fragment_userlist_cab_mention"
            android:title="@string/mention"/>
    <item
            android:id="@+id/fragment_userlist_cab_pm"
            android:title="@string/private_message_short_form"/>
    <item
            android:id="@+id/fragment_userlist_cab_whois"
            android:title="@string/whois"/>
</menu>