<?xml version="1.0" encoding="utf-8"?>
<!--
    HoloIRC - an IRC client for Android

    Copyright 2013 Lalit Maganti

    This file is part of HoloIRC.

    HoloIRC is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    HoloIRC is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with HoloIRC. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="16dp"
        android:baselineAligned="false"
        android:background="?attr/server_card_background"
        android:cacheColorHint="?server_card_background">

    <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/default_item_selector"
            android:layout_marginLeft="8dip"
            android:layout_weight="90"
            android:onClick="onCardClick"
            android:orientation="vertical">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:fontFamily="sans-serif-thin"
                android:text="@string/title"
                android:textColor="?attr/server_card_text"
                android:textSize="24sp"/>

        <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="48dip"
                android:layout_marginTop="10dip"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="3"
                android:text="@string/description"
                android:textColor="?attr/server_card_text"
                android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:orientation="vertical"
            android:onClick="showPopup"
            android:id="@+id/overflow_menu">

        <ImageView
                android:id="@+id/overflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_item_selector"
                android:contentDescription="@string/overflow"
                android:padding="2dip"
                android:src="@drawable/ic_menu_moreoverflow_normal_holo_light"/>
    </LinearLayout>
</LinearLayout>